--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           </div>
           <button class="adcbtn">
             <img
-              src="./\/assets/images/icon-cart.svg"
+              src="./assets/images/icon-cart.svg"
               alt="karr"
               class="kart"
             />
